# soundsync

./: .dockerignore  .eslintrc.js  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.md  package.json  pipeCreatorTester.js  todo.txt  tsconfig.json
.github/workflows/: build.yml  remove-old-artifacts.yml
app/: package.json
rendezvous-service/: .gitignore  package.json  tsconfig.json
rendezvous-service/config/: custom-environment-variables.js  default.js
rendezvous-service/src/: index.ts  router.ts
res/doc/: raspberrypi.md  windows.md
scripts/: Dockerfile_crossarch  build.sh  clean_build.sh  compile_for_raspberrypi.sh  electronpack-hook.js  move_dist.sh  notarize.js  sync_files_with_remote.sh  systemd_start_script.sh  update_build_version.sh
scripts/package_extra/: install.sh
speex-resampler/: CMakeLists.txt  out.pcm  package.json  test.pcm
speex-resampler/src/: index.js  resampler.cc  resampler.hh
src/: entrypoint.ts  index.ts  package.json
src/api/: api.ts
src/audio/: audio_sink.ts  audio_source.ts  audio_sources_sinks_manager.ts  default_physical_sink.ts  get_audio_sources_sinks_manager.ts  librespot_source.ts  opus_streams.ts  remote_sink.ts  remote_source.ts  rtaudio_sink.ts  sink_type.ts  source_type.ts  utils.ts
src/communication/: bonjour.ts  coordinatorDetector.ts  get_peers_manager.ts  http_server.ts  https_sni_request.ts  local_peer.ts  messages.ts  peer.ts  peers_manager.ts  rendezvous_service.ts  wrtc_peer.ts  wrtc_server.ts
webui/: .babelrc  .eslintrc.js  .gitignore  package.json  tsconfig.json  webpack.config.js
(+206 files in other folders)
